# fastapi-starter

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.py  docker-compose.dev.yml  docker-compose.yml  docker-dev.py  main.py  nginx.conf  pyproject.toml  test_app.py
app/: __init__.py
app/api/: health.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  items.py  users.py
app/core/: __init__.py  app.py  config.py  middleware.py
app/models/: item.py  user.py
app/schemas/: auth.py  item.py  user.py
app/utils/: database.py  ldap.py  security.py
ssl/: README.md
tests/: conftest.py  test_health.py
